examples/errors/parser-invalid-range.spcasm
incbin "../binary.bin":4-2
